Changed ssr action meta to dependentRequestsNumber and isDependentRequest

--- a/examples/server-side-rendering/src/index.hbs
+++ b/examples/server-side-rendering/src/index.hbs
@@ -10,7 +10,7 @@
   <div id="root">{{{ html }}}</div>
   <script>
     window.__INITIAL_STATE__ = {{{ initialState }}};
-    window.__SERVER_REQUEST_ACTIONS__ = {{{ serverRequestActions }}}
+    window.__SERVER_REQUEST_ACTIONS__ = {{{ serverRequestActions }}};
   </script>
 </body>
 </html>
