--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -23,3 +23,6 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.deleted { color: #b31d28; }
+.inserted { color: #22863a; }
